@startuml
scale 350 width

state wordcounter {
  [*] --> OUT_WORD : counter = 0
  OUT_WORD --> IN_WORD : Buchstabe/Ziffer, counter++
  OUT_WORD --> OUT_WORD : *
  IN_WORD --> IN_WORD : Buchstabe/Ziffer
  IN_WORD --> OUT_WORD : *
  OUT_WORD --> IN_TAG : '<'
  IN_TAG --> OUT_WORD : '>'
  IN_TAG --> IN_TAG : *
  IN_TAG --> IN_STRING : '"'
  IN_STRING --> IN_TAG : '"'
  IN_STRING --> IGNORE : '\'
  IGNORE --> IN_STRING : *
  IN_STRING --> IN_STRING : *
}
@enduml